--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								<div class="form">
 									<input type="text" name="name" autocomplete="off" required />
 									<label for="name" class="label-name">
-										<span class="content-name">Name and Sername</span>
+										<span class="content-name">Full Name</span>
 									</label>
 								</div>
 						
